<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_part"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="50"
        android:gravity="center_horizontal"
        android:hint="@string/name_parts" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/catalogue_number"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="50"
        android:gravity="center_horizontal"
        android:hint="@string/catalogue_number"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/replace"
            android:text="@string/replace"
            android:onClick="onClick"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/control"
            android:text="@string/control"
            android:onClick="onClick" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:text="@string/add"
        android:onClick="onClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:id="@+id/complete"
        android:onClick="onClick" />

</LinearLayout>