<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    app:columnCount="6"
    app:rowCount="4"
    app:orientation="horizontal">

    <TextView
        android:id="@+id/text_view_name_part"
        app:layout_columnSpan="6"
        app:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_view_exist"
        android:text="@string/exist"
        app:layout_columnSpan="2"
        app:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_view_autodoc"
        android:text="@string/autodoc"
        app:layout_columnSpan="2"
        app:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_view_emex"
        android:text="@string/emex"
        app:layout_columnSpan="2"
        app:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/text_view_exist_price"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_view_autodoc_price"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_view_emex_price"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/edit"
        android:text="@string/edit"
        app:layout_columnSpan="3"
        app:layout_columnWeight="1"
        app:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/delete"
        android:text="@string/delete"
        app:layout_columnSpan="3"

        app:layout_gravity="center_horizontal"/>

    <!--TODO Подсветка цен - самое дорогое красный, среднее - жёлтое, самое дешёвое зелёный-->

</android.support.v7.widget.GridLayout>
